tags de formatação de texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Olá mundo</h1>
-    <h2>Sejam bem-vindos</h2>
+    <h2>Olá mundo</h2>
+    <h3>Olá mundo</h3>
+    <h4>Olá mundo</h4>
+    <h5>Olá mundo</h5>
+    <h6>Olá mundo</h6>
+    <p><strong><em>Lorem ipsum dolo</em>Lorem ipsum dolo</strong>Lorem ipsum dolor</p> sit <br>amet consectetur adipisicing elit. Nemo totam non laudantium <br>perspiciatis <strong>laudantium</strong>necessitatibus <del>ssumenda officiis sint</del>assumenda officiis sint, <br>illum corrupti, <i>consectetur adipisicing elit</i>ipsam <u>ratione officia rerum minima</u>ratione officia rerum minima fugit quo corporisbr <br>eligendi odit suscipits
+    <b>um txto em negrito</b>
+    <!-- tags s está depreciada --> 
+     <!-- tags u tambem está depreciada -->
 </body>
 </html>
