--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html - aula1</title>
+    <style>
+        body {
+            color: blueviolet;
+        }
+
+        h3 {
+            color: aqua;
+            font-size: 40px;
+        }
+
+        p {
+            color: blue;
+        }
+
+        strong em {
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Olá mundo</h1>
-    <h2>Olá mundo</h2>
+    <h1 style="color:red;">Olá mundo</h1>
+    <h2 style="background-color: blue; color: white;">Olá mundo</h2>
     <h3>Olá mundo</h3>
     <h4>Olá mundo</h4>
     <h5>Olá mundo</h5>
     <h6>Olá mundo</h6>
-    <p><strong><em>Lorem ipsum dolo</em>Lorem ipsum dolo</strong>Lorem ipsum dolor</p> sit <br>amet consectetur adipisicing elit. Nemo totam non laudantium <br>perspiciatis <strong>laudantium</strong>necessitatibus <del>ssumenda officiis sint</del>assumenda officiis sint, <br>illum corrupti, <i>consectetur adipisicing elit</i>ipsam <u>ratione officia rerum minima</u>ratione officia rerum minima fugit quo corporisbr <br>eligendi odit suscipits
+    <p><strong><em>Lorem ipsum dolo</em>Lorem ipsum dolo</strong>Lorem ipsum dolor</p> sit <br>amet consectetur
+    adipisicing elit. Nemo totam non laudantium <br>perspiciatis <strong>laudantium</strong>necessitatibus <del>ssumenda
+        officiis sint</del>assumenda officiis sint, <br>illum corrupti, <i>consectetur adipisicing elit</i>ipsam
+    <u>ratione officia rerum minima</u>ratione officia rerum minima fugit quo corporisbr <br>eligendi odit suscipits
     <b>um txto em negrito</b>
-    <!-- tags s está depreciada --> 
-     <!-- tags u tambem está depreciada -->
+    <!-- tags s está depreciada -->
+    <!-- tags u tambem está depreciada -->
 </body>
+
 </html>
